2001-08-26  John Levon  <moz@compsoc.man.ac.uk>

	* Dialogs.C:
	* QCharacter.[Ch]:
	* QCharacterDialog.[Ch]:
	* ui/QcharacterDialog.ui: make work again,
	  add auto-apply feature
 
2001-08-26  John Levon  <moz@compsoc.man.ac.uk>

	* Dialogs.C:
	* Makefile.am:
	* Makefile.dialogs:
	* QBibitem.[Ch]:
	* QBibitemDialog.[Ch]:
	* ui/QBibitemDialog.ui: add Bibitem dialog
 
2001-08-26  John Levon  <moz@compsoc.man.ac.uk>

	* Dialogs.C:
	* Makefile.dialogs:
	* QBibtex.[Ch]:
	* QBibtexDialog.[Ch]:
	* ui/QBibtexDialog.ui: added BibTeX dialog.

	* README: update
 
2001-08-26  John Levon  <moz@compsoc.man.ac.uk>

	* Qt2BC.C: whoops, reversed sense of setReadOnly()
 
2001-08-26  John Levon  <moz@compsoc.man.ac.uk>

	* Dialogs.C: 
	* QRef.[Ch]:
	* ui/QRefDialog.ui: add Ref dialog back

	* QAbout.[Ch]:
	* QCitation.[Ch]: 
	* QDocument.[Ch]: 
	* QIndex.[Ch]: 
	* QURL.[Ch]:
	* Qt2Base.h: protect build() with updating_ too 

	* QCitationDialog.C: use Qt2Base::readOnly

	* README: update
	 
2001-08-25  John Levon  <moz@compsoc.man.ac.uk>

	* Dialogs.C: add URL
 
	* QAbout.h:
	* QCitation.h:
	* QDocument.h: 
	* QIndex.C: 
	* Qt2Base.h:
	* Qt2Base.C: add an updating_ variable to prevent
	  bc() breakage.

	* QURL.h:
	* QURL.C:
	* QURLDialog.h:
	* QURLDialog.C:
	* ui/QURLDialog.ui: make alive again
	 
	* Qt2BC.C: make lineedits ReadOnly not disabled 
 
	* README: update
 
	* ui/QCitationDialog.ui: small cleanups

	* ui/QIndexDialog.ui: add a what's this
 
2001-08-24  John Levon  <moz@compsoc.man.ac.uk>

	* Dialogs.C: include the right files

	* QCitation.C: closePB not cancelPB
 
	* QCitationDialog.C:
	* QCitationDialog.h:
	* ui/QCitationDialog.ui: small fixes

	* QIndex.h:
	* QIndex.C:
	* QIndexDialog.C:
	* QIndexDialog.h: 
	* ui/QIndexDialog.ui: more fixes
	 
	* Qt2Base.h:
	* Qt2Base.C: add reset() to workaround problem. 

	* README: update

	* Makefile.am: 
	* Timeout_pimpl.h:
	* Timeout_pimpl.C: add the timer

2001-08-23  John Levon  <moz@compsoc.man.ac.uk>

	* Dialogs.C: