@@ -56,9 +56,10 @@ Dialog		Maintainer	MVC conversion
 ----------------------------------------------
 About		John		Done
 Bibtex		John		Done
-Character	Edwin
+Character	Edwin		Done
 Citation	Kalle		Done
 Document	Kalle		Waiting for MVC
+Error		John		Done 
 Index		Kalle		Done
 Paragraph	Edwin		Waiting for MVC
 Print		Edwin
